; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ixl/extr_if_iavf.c_iavf_if_disable_intr.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ixl/extr_if_iavf.c_iavf_if_disable_intr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iavf_sc = type { %struct.ixl_vsi }
%struct.ixl_vsi = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @iavf_if_disable_intr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @iavf_if_disable_intr(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.iavf_sc*, align 8
  %4 = alloca %struct.ixl_vsi*, align 8
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call %struct.iavf_sc* @iflib_get_softc(i32 %5)
  store %struct.iavf_sc* %6, %struct.iavf_sc** %3, align 8
  %7 = load %struct.iavf_sc*, %struct.iavf_sc** %3, align 8
  %8 = getelementptr inbounds %struct.iavf_sc, %struct.iavf_sc* %7, i32 0, i32 0
  store %struct.ixl_vsi* %8, %struct.ixl_vsi** %4, align 8
  %9 = load %struct.ixl_vsi*, %struct.ixl_vsi** %4, align 8
  %10 = call i32 @iavf_disable_intr(%struct.ixl_vsi* %9)
  ret void
}

declare dso_local %struct.iavf_sc* @iflib_get_softc(i32) #1

declare dso_local i32 @iavf_disable_intr(%struct.ixl_vsi*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
